# git-perms

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci-security.yml  essentials.yml  large-scope.yml  release.yml
ci/: test_full.sh
src/: config.rs  error.rs  git.rs  hooks.rs  lib.rs  perms.rs
tests/: integration.rs
