[package]
name = "git-perms"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
description = "Store and restore Unix file permissions across git operations."
readme = "README.md"

documentation = "https://docs.rs/git-perms"
homepage = "https://github.com/graelo/git-perms"
repository = "https://github.com/graelo/git-perms"
license = "MIT OR Apache-2.0"

keywords = ["cli", "git", "permissions", "unix"]
categories = ["command-line-utilities"]
exclude = ["/.github"]

[[bin]]
name = "git-perms"
path = "src/bin/git-perms.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"

[profile.release]
# Enable link-time optimization (LTO). It's a kind of whole-program or
# inter-module optimization as it runs as the very last step when linking the
# different parts of your binary together. You can think of it as allowing
# better inlining across dependency boundaries (but it's of course more
# complicated that that).
#
# Rust can use multiple linker flavors, and the one we want is "optimize across
# all crates", which is called "fat". To set this, add the lto flag to your
# profile:
lto = "fat"

# To speed up compile times, Rust tries to split your crates into small chunks
# and compile as many in parallel as possible. The downside is that there's
# less opportunities for the compiler to optimize code across these chunks. So,
# let's tell it to do one chunk per crate:
codegen-units = 1

# Rust by default uses stack unwinding (on the most common platforms). That
# costs performance, so let's skip stack traces and the ability to catch panics
# for reduced code size and better cache usage:
panic = "abort"

strip = true
